--- a/index.html
+++ b/index.html
@@ -64,38 +64,64 @@
 
         .bottom-nav {
             position: absolute;
-            bottom: 80px;
+            bottom: 60px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 10;
             cursor: pointer;
             text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+        }
+
+        .click-text {
+            font-size: 0.8rem;
+            font-weight: 600;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            opacity: 0;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            transform: translateY(10px);
+            background: linear-gradient(135deg, #00f3ff, #bd00ff);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            white-space: nowrap;
+        }
+
+        .bottom-nav:hover .click-text {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         .circle-btn {
-            width: 50px;
-            height: 50px;
-            border: 1px solid rgba(0, 243, 255, 0.3);
+            width: 60px;
+            height: 60px;
+            border: 1px solid rgba(0, 243, 255, 0.4);
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: all 0.3s ease;
+            transition: all 0.4s ease;
+            background: rgba(0, 243, 255, 0.05);
         }
 
         .circle-btn::after {
             content: '';
-            width: 8px;
-            height: 8px;
+            width: 10px;
+            height: 10px;
             background-color: #00f3ff;
             border-radius: 50%;
-            box-shadow: 0 0 10px #00f3ff;
+            box-shadow: 0 0 15px #00f3ff;
             animation: breathe 2s infinite ease-in-out;
         }
 
         .bottom-nav:hover .circle-btn {
             border-color: #00f3ff;
-            box-shadow: 0 0 20px rgba(0, 243, 255, 0.4);
+            box-shadow: 0 0 25px rgba(0, 243, 255, 0.5);
+            transform: scale(1.05);
         }
 
         @keyframes breathe {
@@ -103,7 +129,7 @@
             0%,
             100% {
                 transform: scale(0.8);
-                opacity: 0.6;
+                opacity: 0.5;
             }
 
             50% {
@@ -134,6 +160,7 @@
     </div>
 
     <a href="intro.html" class="bottom-nav">
+        <span class="click-text">Click here</span>
         <div class="circle-btn"></div>
     </a>
 
