--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             top: 0;
             left: 0;
             z-index: 0;
+            transition: opacity 0.8s ease, filter 0.8s ease;
         }
 
         .center-content {
@@ -43,6 +44,17 @@
             text-align: center;
             pointer-events: none;
             user-select: none;
+            transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1), transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        body:has(.bottom-nav:hover) .center-content {
+            opacity: 0.15;
+            transform: translate(-50%, -55%);
+        }
+
+        body:has(.bottom-nav:hover) canvas {
+            opacity: 0.25;
+            filter: blur(3px);
         }
 
         h1 {
