--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
             margin: 0;
             letter-spacing: 2px;
             color: #fff;
-            text-shadow: 0 0 20px rgba(0, 243, 255, 0.3);
+            text-shadow: 0 0 20px rgba(0, 243, 255, 0.4), 0 0 40px rgba(0, 0, 0, 0.8);
         }
 
         h2 {
             font-size: 1.8rem;
             margin-top: 15px;
             font-weight: 400;
-            color: rgba(255, 255, 255, 0.7);
+            color: rgba(255, 255, 255, 0.8);
             letter-spacing: 8px;
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
         }
 
         .bottom-nav {
@@ -118,6 +119,19 @@
             align-items: center;
             transition: all 0.4s ease;
             background: rgba(0, 243, 255, 0.05);
+            position: relative;
+        }
+
+        /* 引导点击的脉冲环 */
+        .circle-btn::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border: 1px solid #00f3ff;
+            border-radius: 50%;
+            animation: pulse-ring 2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+            pointer-events: none;
         }
 
         .circle-btn::after {
@@ -147,6 +161,19 @@
             50% {
                 transform: scale(1.2);
                 opacity: 1;
+            }
+        }
+
+        @keyframes pulse-ring {
+            0% {
+                transform: scale(0.9);
+                opacity: 0.8;
+            }
+
+            80%,
+            100% {
+                transform: scale(1.8);
+                opacity: 0;
             }
         }
 
