--- a/intro.html
+++ b/intro.html
@@ -61,8 +61,10 @@
             font-weight: 700;
             background: linear-gradient(to right, #fff, var(--accent-cyan));
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             letter-spacing: 2px;
+            text-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
         }
 
         .name-block h2 {
@@ -70,6 +72,7 @@
             margin: 10px 0 20px 0;
             font-weight: 300;
             color: var(--text-secondary);
+            text-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
         }
 
         .info-tags span {
