--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
             connectDist: 160,
             mouseConnectDist: 220,
             speed: 0.4,
-            packetSpawnRate: 0.015
+            packetSpawnRate: 0.015,
+            complexities: ['O(1)', 'O(log n)', 'O(n)', 'O(n log n)', 'O(n²)'],
+            labelChars: 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'
         };
 
         function resize() {
@@ -244,6 +246,16 @@
                 this.vx = (Math.random() - 0.5) * config.speed;
                 this.vy = (Math.random() - 0.5) * config.speed;
                 this.radius = Math.random() * 1.5 + 1;
+                this.label = this.generateLabel();
+                this.isPrimary = this.radius > 2.0;
+            }
+
+            generateLabel() {
+                let res = '';
+                for (let i = 0; i < 5; i++) {
+                    res += config.labelChars.charAt(Math.floor(Math.random() * config.labelChars.length));
+                }
+                return res;
             }
 
             update() {
@@ -272,6 +284,26 @@
                 ctx.shadowColor = '#00f3ff';
                 ctx.fill();
                 ctx.shadowBlur = 0;
+
+                // 绘制节点标签 (锦上添花)
+                if (this.isPrimary) {
+                    ctx.fillStyle = 'rgba(0, 243, 255, 0.6)';
+                    ctx.font = '9px monospace';
+                    ctx.fillText(this.label, this.x + 8, this.y + 4);
+                }
+
+                // 鼠标靠近时增强显示
+                if (mouse.x != null) {
+                    let dx = mouse.x - this.x;
+                    let dy = mouse.y - this.y;
+                    let dist = Math.sqrt(dx * dx + dy * dy);
+                    if (dist < 100) {
+                        ctx.fillStyle = 'rgba(255, 255, 255, 0.8)';
+                        ctx.font = '10px monospace';
+                        ctx.fillText(this.label, this.x + 8, this.y + 4);
+                        if (Math.random() > 0.95) this.label = this.generateLabel(); // 动态闪烁
+                    }
+                }
             }
         }
 
@@ -298,6 +330,13 @@
                 ctx.shadowColor = '#ffffff';
                 ctx.fill();
                 ctx.shadowBlur = 0;
+
+                // 偶尔在数据包上显示 Big O
+                if (this.progress > 0.4 && this.progress < 0.45 && Math.random() > 0.9) {
+                    ctx.fillStyle = 'rgba(189, 0, 255, 0.8)';
+                    ctx.font = 'italic 10px monospace';
+                    ctx.fillText(config.complexities[Math.floor(Math.random() * config.complexities.length)], x + 5, y - 5);
+                }
             }
         }
 
@@ -339,6 +378,18 @@
                         ctx.moveTo(nodes[i].x, nodes[i].y);
                         ctx.lineTo(nodes[j].x, nodes[j].y);
                         ctx.stroke();
+
+                        // 【新增】：扫描线效果 (Sorting simulation)
+                        let scanPos = (Date.now() % 2000) / 2000;
+                        if (Math.random() > 0.99) { // 随机在某些线上显示扫描点
+                            ctx.beginPath();
+                            ctx.strokeStyle = '#fff';
+                            ctx.lineWidth = 1;
+                            let sx = nodes[i].x + dx * scanPos;
+                            let sy = nodes[i].y + dy * scanPos;
+                            ctx.arc(sx, sy, 1, 0, Math.PI * 2);
+                            ctx.stroke();
+                        }
 
                         if (Math.random() < config.packetSpawnRate) {
                             particles.push(new Packet(nodes[i], nodes[j]));
