Final polish: descriptive button text, pulsing chevron, and SEO meta tags

--- a/intro.html
+++ b/intro.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Yan - Profile</title>
+    <title>Lucas Yan | About & Portfolio</title>
+    <meta name="description"
+        content="About Lucas Yan - Finance / SCM & CS Student at Rutgers. Profile, technical stack, and professional highlights.">
+
+    <!-- Open Graph / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lucasyanzy.github.io/Intro/intro.html">
+    <meta property="og:title" content="Lucas Yan | About & Portfolio">
+    <meta property="og:description" content="Professional profile and technical highlights of Lucas Yan.">
+
+    <!-- Professional Links -->
+    <link rel="me" href="https://www.linkedin.com/in/lucasyanzy/">
     <style>
         :root {
             --bg-color: #050505;
