--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Yan</title>
+    <title>Lucas Yan | Finance & CS Portfolio</title>
+    <meta name="description"
+        content="Lucas Yan - Finance, SCM & Computer Science at Rutgers. Explore my algorithmic universe and professional portfolio.">
+    <meta name="keywords" content="Lucas Yan, Rutgers, Finance, Computer Science, SCM, Portfolio, Algorithmic Universe">
+
+    <!-- Open Graph / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lucasyanzy.github.io/Intro/">
+    <meta property="og:title" content="Lucas Yan | Finance & CS Portfolio">
+    <meta property="og:description"
+        content="Explore the algorithmic portfolio of Lucas Yan, intersecting Finance and Computer Science.">
+    <meta property="og:image" content="https://lucasyanzy.github.io/Intro/assets/preview.png">
+    <!-- Placeholder for future use -->
+
+    <!-- Professional Links -->
+    <link rel="canonical" href="https://lucasyanzy.github.io/Intro/">
+    <link rel="me" href="https://www.linkedin.com/in/lucasyanzy/">
     <style>
         :root {
             --bg: #050505;
@@ -90,23 +106,33 @@
         }
 
         .click-text {
-            font-size: 0.8rem;
-            font-weight: 600;
-            letter-spacing: 3px;
+            font-size: 0.85rem;
+            font-weight: 500;
+            letter-spacing: 2px;
             text-transform: uppercase;
-            opacity: 0;
+            opacity: 0.8;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            transform: translateY(10px);
             background: linear-gradient(135deg, #00f3ff, #bd00ff);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
             white-space: nowrap;
+            margin-bottom: 5px;
+        }
+
+        .chevron {
+            width: 15px;
+            height: 15px;
+            border-bottom: 2px solid #00f3ff;
+            border-right: 2px solid #00f3ff;
+            transform: rotate(45deg);
+            margin-bottom: 10px;
+            animation: bounce-down 2s infinite;
         }
 
         .bottom-nav:hover .click-text {
             opacity: 1;
-            transform: translateY(0);
+            transform: scale(1.05);
         }
 
         .circle-btn {
@@ -170,10 +196,29 @@
                 opacity: 0.8;
             }
 
+            70%,
+            100% {
+                transform: scale(2.0);
+                opacity: 0;
+            }
+        }
+
+        @keyframes bounce-down {
+
+            0%,
+            20%,
+            50%,
             80%,
             100% {
-                transform: scale(1.8);
-                opacity: 0;
+                transform: rotate(45deg) translate(0, 0);
+            }
+
+            40% {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+
+            60% {
+                transform: rotate(45deg) translate(2px, 2px);
             }
         }
 
@@ -199,7 +244,8 @@
     </div>
 
     <a href="intro.html" class="bottom-nav">
-        <span class="click-text">Click here</span>
+        <div class="chevron"></div>
+        <span class="click-text">Explore My Universe / 探索我的宇宙</span>
         <div class="circle-btn"></div>
     </a>
 
