--- a/index.html
+++ b/index.html
@@ -106,33 +106,26 @@
         }
 
         .click-text {
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             font-weight: 500;
             letter-spacing: 2px;
             text-transform: uppercase;
-            opacity: 0.8;
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            background: linear-gradient(135deg, #00f3ff, #bd00ff);
+            opacity: 0.6;
+            transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+            background: linear-gradient(90deg,
+                    #00f3ff, #bd00ff, #00f3ff, #7000ff, #00f3ff);
+            background-size: 200% auto;
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
             white-space: nowrap;
-            margin-bottom: 5px;
-        }
-
-        .chevron {
-            width: 15px;
-            height: 15px;
-            border-bottom: 2px solid #00f3ff;
-            border-right: 2px solid #00f3ff;
-            transform: rotate(45deg);
             margin-bottom: 10px;
-            animation: bounce-down 2s infinite;
         }
 
         .bottom-nav:hover .click-text {
             opacity: 1;
-            transform: scale(1.05);
+            transform: scale(1.02);
+            animation: siri-flow 3s linear infinite;
         }
 
         .circle-btn {
@@ -203,22 +196,9 @@
             }
         }
 
-        @keyframes bounce-down {
-
-            0%,
-            20%,
-            50%,
-            80%,
-            100% {
-                transform: rotate(45deg) translate(0, 0);
-            }
-
-            40% {
-                transform: rotate(45deg) translate(5px, 5px);
-            }
-
-            60% {
-                transform: rotate(45deg) translate(2px, 2px);
+        @keyframes siri-flow {
+            to {
+                background-position: 200% center;
             }
         }
 
@@ -244,7 +224,6 @@
     </div>
 
     <a href="intro.html" class="bottom-nav">
-        <div class="chevron"></div>
         <span class="click-text">Explore My Universe / 探索我的宇宙</span>
         <div class="circle-btn"></div>
     </a>
