--- a/index.html
+++ b/index.html
@@ -106,39 +106,82 @@
         }
 
         .click-text {
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             font-weight: 500;
             letter-spacing: 2px;
             text-transform: uppercase;
-            opacity: 0.6;
-            transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-            background: linear-gradient(90deg,
-                    #00f3ff, #bd00ff, #00f3ff, #7000ff, #00f3ff);
-            background-size: 200% auto;
+            opacity: 0.7;
+            transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+            /* Siri Mesh Gradient Palette */
+            background: linear-gradient(-45deg,
+                    #ff9d00, #ff2d55, #a259ff, #00f3ff, #ff2d55, #ff9d00);
+            background-size: 400% 400%;
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
             white-space: nowrap;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
+            position: relative;
+            z-index: 2;
         }
 
         .bottom-nav:hover .click-text {
             opacity: 1;
-            transform: scale(1.02);
-            animation: siri-flow 3s linear infinite;
+            transform: scale(1.05);
+            animation: siri-flow 4s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
+            filter: drop-shadow(0 0 8px rgba(255, 45, 85, 0.3));
         }
 
         .circle-btn {
-            width: 60px;
-            height: 60px;
-            border: 1px solid rgba(0, 243, 255, 0.4);
+            width: 64px;
+            height: 64px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: all 0.4s ease;
-            background: rgba(0, 243, 255, 0.05);
+            transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
             position: relative;
+            z-index: 2;
+            box-shadow: inset 0 0 15px rgba(255, 255, 255, 0.05);
+        }
+
+        /* Apple Intelligence Aura Effect */
+        .bottom-nav::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: radial-gradient(circle,
+                    rgba(255, 45, 85, 0.4) 0%,
+                    rgba(162, 89, 255, 0.3) 30%,
+                    rgba(0, 243, 255, 0.2) 60%,
+                    transparent 80%);
+            transform: translate(-50%, -50%);
+            border-radius: 50%;
+            z-index: 1;
+            filter: blur(40px);
+            transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .bottom-nav:hover::before {
+            width: 300px;
+            height: 300px;
+            opacity: 0.8;
+            animation: aura-breathe 4s ease-in-out infinite alternate;
+        }
+
+        .bottom-nav:hover .circle-btn {
+            border-color: rgba(0, 243, 255, 0.6);
+            transform: scale(1.1);
+            box-shadow: 0 0 30px rgba(0, 243, 255, 0.2), inset 0 0 20px rgba(0, 243, 255, 0.1);
         }
 
         /* 引导点击的脉冲环 */
@@ -197,8 +240,28 @@
         }
 
         @keyframes siri-flow {
-            to {
-                background-position: 200% center;
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        @keyframes aura-breathe {
+            0% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.6;
+            }
+
+            100% {
+                transform: translate(-50%, -50%) scale(1.2);
+                opacity: 0.9;
             }
         }
 
