--- a/index.html
+++ b/index.html
@@ -129,34 +129,44 @@
         .bottom-nav:hover .click-text {
             opacity: 1;
             transform: scale(1.02);
-            animation: siri-sweep 2.5s ease-in-out infinite;
+            animation: siri-sweep 3s ease-in-out infinite;
             filter: drop-shadow(0 0 5px rgba(162, 89, 255, 0.3));
         }
 
         .circle-btn {
             width: 60px;
             height: 60px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
             transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-            background: rgba(0, 0, 0, 0.6);
-            backdrop-filter: blur(15px);
-            -webkit-backdrop-filter: blur(15px);
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
             position: relative;
             z-index: 2;
-            overflow: visible;
         }
 
-        /* Authentic Apple Edge Glow */
-        .circle-btn::before {
+        /* Full-Screen Siri Edge Glow */
+        #siri-screen-glow {
+            position: fixed;
+            inset: 0;
+            z-index: 9999;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+            box-sizing: border-box;
+        }
+
+        #siri-screen-glow::before {
             content: '';
             position: absolute;
-            inset: -1.5px;
-            padding: 1.5px;
-            border-radius: 50%;
-            background: conic-gradient(#00f3ff, #7000ff, #ff2d55, #ff9d00, #a259ff, #00f3ff);
+            inset: 0;
+            padding: 3px;
+            background: conic-gradient(from 0deg,
+                    #00f3ff, #7000ff, #a259ff, #ff2d55, #ff9d00, #a259ff, #7000ff, #00f3ff);
             -webkit-mask:
                 linear-gradient(#fff 0 0) content-box,
                 linear-gradient(#fff 0 0);
@@ -165,37 +175,19 @@
                 linear-gradient(#fff 0 0);
             -webkit-mask-composite: xor;
             mask-composite: exclude;
-            opacity: 0;
-            transition: opacity 0.4s ease;
+            filter: blur(8px);
+            animation: siri-rotate 6s linear infinite;
         }
 
-        /* Outer Glow Layer */
-        .circle-btn::after {
-            content: '';
-            position: absolute;
-            inset: -3px;
-            background: conic-gradient(#00f3ff, #7000ff, #ff2d55, #ff9d00, #a259ff, #00f3ff);
-            border-radius: 50%;
-            z-index: -1;
-            opacity: 0;
-            filter: blur(6px);
-            transition: opacity 0.6s ease;
-        }
-
-        .bottom-nav:hover .circle-btn::before,
-        .bottom-nav:hover .circle-btn::after {
-            opacity: 1;
-            animation: siri-rotate 1.5s linear infinite;
+        .bottom-nav:hover~#siri-screen-glow,
+        #siri-screen-glow.active {
+            opacity: 0.8;
         }
 
         .bottom-nav:hover .circle-btn {
-            transform: scale(1.08);
-            box-shadow: 0 0 20px rgba(0, 243, 255, 0.1);
-        }
-
-        /* Remove old aura */
-        .bottom-nav::before {
-            display: none !important;
+            transform: scale(1.1);
+            border-color: rgba(0, 243, 255, 0.6);
+            box-shadow: 0 0 20px rgba(0, 243, 255, 0.2);
         }
 
         @keyframes breathe {
@@ -268,8 +260,14 @@
 
     <a href="intro.html" class="bottom-nav">
         <span class="click-text">Explore My Universe / 探索我的宇宙</span>
-        <div class="circle-btn"></div>
+        <div class="circle-btn">
+            <div
+                style="width: 10px; height: 10px; background: #00f3ff; border-radius: 50%; box-shadow: 0 0 15px #00f3ff; opacity: 0.5;">
+            </div>
+        </div>
     </a>
+
+    <div id="siri-screen-glow"></div>
 
     <script>
         const canvas = document.getElementById('universe');
@@ -490,11 +488,25 @@
                 if (!p.alive) particles.splice(i, 1);
             }
 
-            requestAnimationFrame(animate);
         }
 
-        resize();
-        animate();
+        // Siri Glow Interaction
+        const bottomNav = document.querySelector('.bottom-nav');
+        const siriGlow = document.getElementById('siri-screen-glow');
+
+        bottomNav.addEventListener('mouseenter', () => {
+            siriGlow.classList.add('active');
+        });
+
+        bottomNav.addEventListener('mouseleave', () => {
+            siriGlow.classList.remove('active');
+        });
+
+        requestAnimationFrame(animate);
+    </script>
+
+    resize();
+    animate();
     </script>
 </body>
 
