--- a/index.html
+++ b/index.html
@@ -149,34 +149,55 @@
             z-index: 2;
         }
 
-        /* Full-Screen Siri Edge Glow */
+        /* Siri Screen Edge Liquid Glow */
         #siri-screen-glow {
             position: fixed;
             inset: 0;
             z-index: 9999;
             pointer-events: none;
             opacity: 0;
-            transition: opacity 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-            box-sizing: border-box;
+            transition: opacity 1.2s cubic-bezier(0.23, 1, 0.32, 1);
+            box-shadow:
+                inset 0 0 30px rgba(0, 243, 255, 0),
+                inset 0 0 60px rgba(162, 89, 255, 0);
         }
 
-        #siri-screen-glow::before {
-            content: '';
-            position: absolute;
-            inset: 0;
-            padding: 3px;
-            background: conic-gradient(from 0deg,
-                    #00f3ff, #7000ff, #a259ff, #ff2d55, #ff9d00, #a259ff, #7000ff, #00f3ff);
-            -webkit-mask:
-                linear-gradient(#fff 0 0) content-box,
-                linear-gradient(#fff 0 0);
-            mask:
-                linear-gradient(#fff 0 0) content-box,
-                linear-gradient(#fff 0 0);
-            -webkit-mask-composite: xor;
-            mask-composite: exclude;
-            filter: blur(8px);
-            animation: siri-rotate 6s linear infinite;
+        .bottom-nav:hover~#siri-screen-glow,
+        #siri-screen-glow.active {
+            opacity: 1;
+            animation: siri-liquid-glow 8s linear infinite;
+        }
+
+        @keyframes siri-liquid-glow {
+            0% {
+                box-shadow:
+                    inset 5px 5px 40px rgba(0, 243, 255, 0.4),
+                    inset -5px -5px 40px rgba(162, 89, 255, 0.4);
+            }
+
+            25% {
+                box-shadow:
+                    inset -5px 5px 40px rgba(255, 45, 85, 0.4),
+                    inset 5px -5px 40px rgba(0, 243, 255, 0.4);
+            }
+
+            50% {
+                box-shadow:
+                    inset -5px -5px 40px rgba(162, 89, 255, 0.4),
+                    inset 5px 5px 40px rgba(255, 157, 0, 0.4);
+            }
+
+            75% {
+                box-shadow:
+                    inset 5px -5px 40px rgba(0, 243, 255, 0.4),
+                    inset -5px 5px 40px rgba(162, 89, 255, 0.4);
+            }
+
+            100% {
+                box-shadow:
+                    inset 5px 5px 40px rgba(0, 243, 255, 0.4),
+                    inset -5px -5px 40px rgba(162, 89, 255, 0.4);
+            }
         }
 
         .bottom-nav:hover~#siri-screen-glow,
@@ -224,16 +245,6 @@
 
             100% {
                 background-position: 150% center;
-            }
-        }
-
-        @keyframes siri-rotate {
-            from {
-                transform: rotate(0deg);
-            }
-
-            to {
-                transform: rotate(360deg);
             }
         }
 
@@ -502,11 +513,8 @@
             siriGlow.classList.remove('active');
         });
 
-        requestAnimationFrame(animate);
-    </script>
-
-    resize();
-    animate();
+        resize();
+        animate();
     </script>
 </body>
 
